@@ -4,73 +4,53 @@ import Bot.ActionsBot;
 import org.openqa.selenium.By;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
+import org.openqa.selenium.support.ui.ExpectedConditions;
+import org.openqa.selenium.support.ui.WebDriverWait;
 
+import java.time.Duration;
 import java.util.List;
 
 public class CartPage {
 
-    private final WebDriver driver;
-    private final LoginPage loginPage;
-    private final ProductsPage productsPage;
-    private final ActionsBot actionsBot;
-
-
+    WebDriver driver;
+    WebDriverWait wait;
     // Locators
     private final By cartItem = By.className("cart_item");
     private final By cartItemName = By.className("inventory_item_name");
     private final By cartItemPrice = By.className("inventory_item_price");
     private final By quantityField = By.cssSelector(".cart_quantity");
-    private final By checkoutBtn = By.xpath("//*[@id='checkout']");
-    By cartIcon = By.className("shopping_cart_link");
+    private final By checkoutBtn = By.id("checkout");
 
     // Constructor
     public CartPage(WebDriver driver) {
         this.driver = driver;
-        this.loginPage = new LoginPage(driver);
-        this.productsPage = new ProductsPage(driver);
-        this.actionsBot = new ActionsBot(driver);
-
+        this.wait = new WebDriverWait(driver, Duration.ofSeconds(10));
     }
 
     // Methods
-    public void navigateToCart(String userName, String pass) {
-        loginPage.setLogin(userName, pass);
-        productsPage.addFirstProductToCart();
-        productsPage.addSecondProductToCart();
-        productsPage.goToCart();
-    }
-
-
     public int getCartItemsCount() {
-        actionsBot.getText(cartItem);
+        wait.until(ExpectedConditions.presenceOfAllElementsLocatedBy(cartItem));
         return driver.findElements(cartItem).size();
-
-
     }
 
     public String getFirstItemName() {
-        actionsBot.getText(cartItemName);
-        return driver.findElements(cartItemName).get(0).getText();
-
+        List<WebElement> items = driver.findElements(cartItemName);
+        return !items.isEmpty() ? items.getFirst().getText() : null;
     }
 
-
     public String getSecondItemName() {
-        actionsBot.getText(cartItemName);
-        return driver.findElements(cartItemName).get(1).getText();
-
+        List<WebElement> items = driver.findElements(cartItemName);
+        return items.size() > 1 ? items.get(1).getText() : null;
     }
 
     public String getFirstItemPrice() {
-        actionsBot.getText(cartItemPrice);
-        //return driver.findElement(cartItemPrice).getText();
-        return driver.findElements(cartItemPrice).get(0).getText();
+        List<WebElement> prices = driver.findElements(cartItemPrice);
+        return !prices.isEmpty() ? prices.getFirst().getText() : null;
     }
 
     public String getSecondItemPrice() {
-        actionsBot.getText(cartItemPrice);
-        //return driver.findElement(cartItemPrice).getText();
-        return driver.findElements(cartItemPrice).get(1).getText();
+        List<WebElement> prices = driver.findElements(cartItemPrice);
+        return prices.size() > 1 ? prices.get(1).getText() : null;
     }
 
     public int getFirstItemQuantity() {
@@ -88,12 +68,15 @@ public class CartPage {
         return driver.findElement(checkoutBtn).isDisplayed();
     }
 
-    public void clickCheckoutButton() {
-        driver.findElement(checkoutBtn).click();
-    }
-
-
-    public void goToCart() {
-        driver.findElement(cartIcon).click();
+    public void Navigate(WebDriver driver) {
+        driver.get("https://www.saucedemo.com/");
+// Login
+        driver.findElement(By.id("user-name")).sendKeys("standard_user");
+        driver.findElement(By.id("password")).sendKeys("secret_sauce");
+        driver.findElement(By.id("login-button")).click();
+// Add items to cart
+        driver.findElement(By.id("add-to-cart-sauce-labs-backpack")).click();
+        driver.findElement(By.id("add-to-cart-sauce-labs-bike-light")).click();
+        driver.findElement(By.className("shopping_cart_link")).click();
     }
 }
